--- a/source/less/theme/layout.less
+++ b/source/less/theme/layout.less
@@ -1,3 +1,4 @@
+
 a:link {
 	transition: all .5s, color .5s;
 }
@@ -16,420 +17,11 @@ a:link {
 	z-index: 25;
 }
 
-.site-head {
-	position: fixed;
-    width: 28%;
-    height: 100%;
-    z-index: 500;
-	color: #6f5f5c;
-    text-align: center;
-	-webkit-box-shadow: 0 2px 10px rgba(0, 0, 0, .5), 0 2px 3px rgba(0, 0, 0, .5);
-	-moz-box-shadow: 0 2px 10px rgba(0, 0, 0, .5), 0 2px 3px rgba(0, 0, 0, .5);
-	-o-box-shadow: 0 2px 10px rgba(0, 0, 0, .5), 0 2px 3px rgba(0, 0, 0, .5);
-	box-shadow: 0 2px 10px rgba(0, 0, 0, .25), 0 5px 3px rgba(0, 0, 0, .25);
-
-	a {color: #6f5f5c;}
-
-	.site-head-inner {
-		display: table;
-		height: 100%;
-		width: 100%;
-		background: #f0e9dc url('../img/pattern.png');
-	}
-
-	.site-branding {
-		display: table-cell;
-	    vertical-align: middle;
-		.site-title {font-size: 25px; line-height: 31px; margin: 0px; font-weight: 300;}
-		.site-description {font-size: 19px; margin-top: 10px;}
-	}
-}
-
-.post, .page {
-	background-position: center;
-	background-size: cover;
-}
-
-.site-content {
-	margin-left: 28%;
-	min-width: 658px;
-	position: relative;
-	z-index: 1;
-	backface-visibility: visible;
-	-webkit-backface-visibility: visible;
-	-moz-backface-visibility: visible;
-	min-height: 900px;
-}
-
-article.post, article.page, section.not-found {}
-
-.article-wrap {
-	background-image: url('../img/pattern.png');
-	background-position: center center;
-	width:100%;
-	height:auto;
-	padding:8% 0;
-	overflow:hidden;
-	position:relative;
-	border-top: 1px dashed RGBA(255,255,255,0.3);
-	border-bottom: 1px dashed RGBA(0,0,0,0.35);
-}
-
-.entry-header { text-align: center;}
-.entry-title { color: @link-color; font-size: 36px; font-weight: 400; letter-spacing: .01rem;}
-
-.more-link {
-	display: block;
-	margin-top: 8px;
-}
-
-.entry-meta {
-	padding: 8px 0 16px;
-	margin: 16px 0;
-	color: @text-color;
-
-	border-top: 1px dashed RGBA(255,255,255,0.25);
-	border-bottom: 1px dashed RGBA(255,255,255,0.25);
-
-	a {
-		color: @text-color;
-		margin-right:16px;
-	}
-
-	a:hover {color: @link-hover-color;}
-
-	.glyphicon {
-		opacity: .75;
-	}
-}
-
-.entry-content {text-shadow: 0px 1px 0px rgba(0,0,0,.75);}
-
-div.entry-content + div.entry-meta {margin-top: 32px;}
-
-.format-aside .entry-title,
-.format-gallery .entry-title {
-	font-size: 25px;
-
-	a {font-weight: 400;}
-}
-
-.format-aside .entry-title {margin: 10px 25px;}
-
-.format-standard {
-	.entry-title {
-		text-align: left;
-		font-size: 42px;
-		margin-bottom: 32px;
-	}
-}
-
-.format-standard,
-.type-page {
-
-	.lead {font-weight: 300}
-
-	.entry-content {
-		font-size: 20px;
-		line-height: 32px;
-		color: @text-color;
-		font-weight: 300;
-
-
-		.lead {
-			color: @text-color;
-			font-family: @font-family-sans-serif;
-		}
-
-		h3 {color: rgba(255,255,255,.7)}
-	}
-}
-
-.format-quote {
-
-	.entry-header {
-		display: block;
-		margin-bottom: 32px;
-	}
-
-	.entry-title {
-		font-size: 36px;
-		font-style: italic;
-		quotes: "“" "”" "‘" "’";
-		display: inline;
-	}
-
-	.entry-title:before {
-		content: open-quote;
-		font-size: 46px;
-		margin-right: 8px;
-		opacity: .25;
-		text-shadow: 1px 2px #000;
-	}
-}
-
-.entry-footer {margin-top: 16px;}
-
-.photo {
-	position:relative;
-
-    a {
-        width:100%;
-        height: auto;
-        display:block;
-    }
-
-	figure img {
-		padding: 8px;
-		background: rgba(255,255,255,.7);
-	}
-
-    figure:after{
-        position:absolute;
-        content:'';
-        top:0;left:0;right:0;bottom:0;
-        box-shadow:inset 0 1px 0 RGBA(255,255,255,0.25),0 2px 5px RGBA(0,0,0,0.5)
-        ;z-index:999;
-    }
-}
-
-
-.thumbs {
-	position: relative;
-	display: block;
-	clear: both;
-}
-
-.thumb {
-	float: left;
-	display: inline;
-	max-width: 195px;
-	margin: 0 0 18px 0;
-	box-shadow: 0 2px 15px RGBA(0,0,0,0.75);
-	clear: both;
-
-	img {
-		padding: 5px;
-		background: rgba(255,255,255,.7);
-		max-width: 100%;
-		height: auto;
-	}
-}
-
-.thumb-featured {
-	max-width: 408px;
-}
-
-.single-post .photo-featured {margin: 16px auto;}
-.photo-featured img{ width: 100%; height: auto; }
-
-
-@comments-bg: #616563;
-
-.pagination-wrapper,
-.comments-area {
-	border-top: 1px solid RGBA(255,255,255,0.25);
-	border-bottom: 1px solid RGBA(0,0,0,0.15);
-	background-color: @comments-bg;
-	background-image: url('../img/pattern.png');
-}
-
-.header-wrapper {
-	border-top: 1px solid RGBA(255,255,255,0.1);
-	border-bottom: 1px solid RGBA(0,0,0,0.95);
-
-	.page-title {
-		span {font-style: italic}
-	}
-}
-
-.pagination-wrapper {
-	.page-count {
-		padding-top: 35px;
-	}
-}
-
-.site-footer {
-	background-image: url('../img/pattern.png');
-	color: #f0e9dc;
-	background-color: #616563;
-	padding: 50px 0;
-	border-top: 1px solid RGBA(255,255,255,0.1);
-	a { color: #f0e9dc; }
-	.menu ul {.list-inline();}
-}
-
-
-.nav-links {
-	position: fixed;
-	left: 0;
-	right: 0;
-	top: 50%;
-	width: 100%;
-
-	.nav-previous {float: left;}
-	.nav-next {float: right;}
-
-	.nav-previous,
-	.nav-next {
-		background: #26262b;
-		padding: 12px;
-	}
-
-	.hover-only {
-		display: none;
-		transition: display 0.5s ease-in;
-	}
-
-	.nav-previous:hover .hover-only,
-	.nav-next:hover .hover-only {
-		display: inline;
-	}
-}
-
-
-.comments-area {
-	padding: 25px;
-}
-
-.comments-title {
-	padding: 0 0 25px;
-	border-bottom: 1px dashed rgba(255, 255, 255, .25);
-	margin-bottom: 25px;
-}
-
-.comment {
-	padding: 0 0 25px;
-	border-bottom: 1px dashed rgba(255, 255, 255, .25);
-	margin-bottom: 20px;
-	position: relative;
-}
-
-#comments {
-	.avatar {
-		float: left;
-		display: inline;
-		margin: 0 10px 10px 0;
-		background: #f5f1ec;
-	}
-
-	.reply {
-		position: absolute;
-		top: 0;
-		right: 0;
-		width: 37px;
-		height: 16px;
-		overflow: hidden;
-	}
-
-	a.comment-reply-link {
-		float: right;
-		display: block;
-		width: 16px;
-		height: 0;
-		padding: 16px 0 0 0;
-		background: url("../img/comments-reply.png") no-repeat 0 0;
-		border-bottom: none;
-	}
-
-	.form-control {
-		background-color: darken(@comments-bg, 5%);
-	}
-
-	.comment-metadata,
-	.comment-author {
-		font-size: 13px;
-	}
-
-	.comment-content {
-		margin-top: 12px;
-	}
-
-}
-
-
-.children {
-	.list-unstyled();
-	border-top: 1px dashed rgba(255, 255, 255, .25);
-	margin-top: 25px;
-	padding-top: 25px;
-	margin-left: 25px;
-
-	li:last-child {
-		border-width: 0;
-		padding: 0;
-		margin: 0;
-	}
-}
-
-.gallery {
-	margin-top: 40px;
-	.photo { margin-bottom: 40px; }
-}
-
-.search-field {
-	.form-control();
-	font-weight: 300;
-}
-
- article .tags {
-	padding-top: 16px;
-	font-size: 15px;
-
-	.glyphicon {font-size: 13px;}
-
-	a {
-		color: @text-color;
-		margin: 0 16px 0 0;
-		padding: 0 0 2px 2px;
-	}
-
-	a:hover {color: @link-hover-color;}
-}
-
-
-article.archived {
+.site-branding {
+	margin: 40px auto;
+	padding: 20px auto;
 	text-align: center;
-	padding: 15px 0 20px;
-	border-top: 1px solid RGBA(255,255,255,0.1);
-	border-bottom: 1px solid RGBA(0,0,0,0.95);
+	border-bottom: 1px solid #ccc6bb;
+	.site-title {}
+	.site-description {}
 }
-
-.page-header {
-	border-bottom-width: 0;
-}
-
-.screen-reader-text,
-.widget_search .search-submit {.sr-only();}
-
-.widget {
-	margin: 0 0 1.5em;
-
-	select {
-		max-width: 100%;
-	}
-}
-
-.pagination-wrapper {
-	ul.pagination {
-		box-shadow: 0 1px 3px RGBA(0,0,0,0.75);
-	}
-}
-
-/* colors */
-
-.post-color-dark-roast,
-.post-color-rustic,
-.post-color-caramel,
-.post-color-orange,
-.post-color-aqua {
-	color: #f0e9dc;
-	text-shadow: 1px 1px 2px rgba(0,0,0,.65);
-	a, .entry-title:before {color: #f0e9dc;}
-}
-
-.post-color-dark-roast {background-color: #6f5f5c;}
-.post-color-rustic {background-color: #825d5b;}
-.post-color-caramel {background-color: #a26b61;}
-.post-color-orange {background-color: #e38f71;}
-.post-color-aqua {background-color: #858f89;}
