--- a/source/less/coffeehouse.less
+++ b/source/less/coffeehouse.less
@@ -1,3 +1,9 @@
+/*!
+ * Bootstrap v3.3.5 (http://getbootstrap.com)
+ * Copyright 2011-2015 Twitter, Inc.
+ * Licensed under MIT (https://github.com/twbs/bootstrap/blob/master/LICENSE)
+ */
+
 // Core variables and mixins
 @import "variables.less";
 @import "mixins.less";
@@ -21,20 +27,20 @@
 @import "dropdowns.less";
 @import "button-groups.less";
 @import "input-groups.less";
-// @import "navs.less";
-// @import "navbar.less";
+@import "navs.less";
+@import "navbar.less";
 @import "breadcrumbs.less";
 @import "pagination.less";
 @import "pager.less";
 @import "labels.less";
 @import "badges.less";
-// @import "jumbotron.less";
+@import "jumbotron.less";
 @import "thumbnails.less";
 @import "alerts.less";
-// @import "progress-bars.less";
+@import "progress-bars.less";
 @import "media.less";
 @import "list-group.less";
-// @import "panels.less";
+@import "panels.less";
 @import "responsive-embed.less";
 @import "wells.less";
 @import "close.less";
