--- a/source/less/theme/layout.less
+++ b/source/less/theme/layout.less
@@ -11,17 +11,38 @@ a:link {
 }
 
 .large-layout-single-column {
-	max-width: 920px;
+	max-width: 1024px;
 	margin: 0 auto;
 	position: relative;
 	z-index: 25;
+}
+
+.site-header {
+	max-width: 1024px;
+	margin: 0 auto;
 }
 
 .site-branding {
 	margin: 40px auto;
 	padding: 20px auto;
 	text-align: center;
-	border-bottom: 1px solid #ccc6bb;
 	.site-title {}
 	.site-description {}
+}
+
+.main-navigation {
+	border-top: 1px solid #c7c7c7;
+	padding: 5px 0;
+	text-align: center;
+	border-bottom: 1px solid #c7c7c7;
+	margin-bottom: 20px;
+
+	ul {
+		text-transform: uppercase;
+		.list-inline()
+	}
+}
+
+.site-footer {
+	text-align: center;
 }
