--- a/source/theme/coffeehouse/style.css
+++ b/source/theme/coffeehouse/style.css
@@ -1,9 +1,9 @@
 /*
 Theme Name: Coffeehouse
 Theme URI: http://underscores.me/
-Author: Underscores.me
-Author URI: http://underscores.me/
-Description: Description
+Author: Tyler RIlling
+Author URI: http://underlost.net
+Description: Minimal Wordpress photoblog theme
 Version: 1.0.0
 License: GNU General Public License v2 or later
 License URI: http://www.gnu.org/licenses/gpl-2.0.html
