--- a/source/less/theme/layout.less
+++ b/source/less/theme/layout.less
@@ -8,14 +8,14 @@
 }
 
 .large-layout-single-column {
-	max-width: 1024px;
+	max-width: 960px;
 	margin: 0 auto;
 	position: relative;
 	z-index: 25;
 }
 
 .site-header {
-	max-width: 1024px;
+	max-width: 960px;
 	margin: 0 auto;
 }
 
@@ -23,23 +23,39 @@
 	margin: 40px auto;
 	padding: 20px auto;
 	text-align: center;
-	.site-title {}
+	.site-title {font-size: 22px; text-transform: uppercase; letter-spacing: 3px;}
 	.site-description {}
 }
 
 .main-navigation {
 	border-top: 1px solid #c7c7c7;
-	padding: 5px 0;
+	padding: 8px 0 0;
 	text-align: center;
 	border-bottom: 1px solid #c7c7c7;
 	margin-bottom: 20px;
 
+	.menu-toggle {display: none;}
+
 	ul {
+		font-size: 12px;
 		text-transform: uppercase;
-		.list-inline()
+		.list-inline();
 	}
 }
 
 .site-footer {
 	text-align: center;
+}
+
+
+.photo-featured {
+	position: relative;
+
+	h1.entry-title {
+		position: absolute;
+		bottom: 0px;
+		background-color: #ccc;
+	}
+
+	figure img.attachment-large {.img-responsive();}
 }
